syntax = "proto3";
package kademlia;

service Kademlia {
  rpc Ping (PingRequest) returns (PingResponse);
  rpc Store (StoreRequest) returns (StoreResponse);
//  rpc FindNode (FindNodeRequest) returns (FindNodeResponse);
  rpc FindValue (FindValueRequest) returns (FindValueResponse);
}

message Node {
  bytes id = 1;
  string ip = 2;
  uint32 port = 3;
}

message PingRequest {
  Node sender = 1;
}

message PingResponse {
  bool alive = 1;
}

message StoreRequest {
  Node sender = 1;
  bytes key = 2;
  bytes value = 3;
}

message StoreResponse {
  bool success = 1;
}
/*
message FindNodeRequest {
  Node sender = 1;
  bytes node_id = 2;
}

message FindNodeResponse {
  repeated Node nodes = 1;
}
*/
message FindValueRequest {
  Node sender = 1;
  bytes key = 2;
}

message FindValueResponse {
  optional bytes value = 1;
  repeated Node nodes = 2;
}
